# imsg

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  cliff.toml  dist-workspace.toml  justfile  lefthook.yml  release.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  fmt.rs  main.rs  output.rs  progress.rs
crates/cli/src/cli/: args.rs
crates/cli/src/commands/: config.rs  conn.rs  contacts.rs  daemon.rs  delete.rs  folders.rs  get.rs  hub.rs  list.rs  mod.rs  send.rs  spoke.rs  sync.rs  threads.rs  unsync.rs  watch.rs  watch_hub.rs
crates/cli/src/commands/broker/: client.rs  mod.rs  spawn.rs
crates/imsg-broker/: Cargo.toml
crates/imsg-broker/src/: lib.rs
crates/imsg-broker/src/runtime/: daemon.rs  handler.rs  mod.rs  server.rs  shutdown.rs  types.rs
crates/imsg-broker/src/runtime/actor/: dispatch.rs  dto.rs  inner.rs  mod.rs  serve.rs
crates/imsg-broker/src/runtime/actor/serve/: mod.rs  tests.rs
crates/imsg-broker/src/runtime/handler/: tests.rs
crates/imsg-broker/src/runtime/server/: mod.rs  tests.rs
crates/imsg-broker/src/runtime/shutdown/: tests.rs
crates/imsg-config/: Cargo.toml
crates/imsg-config/src/: broker.rs  lib.rs  write.rs
crates/imsg-config/tests/: config_tests.rs
crates/imsg-formats/: Cargo.toml
crates/imsg-formats/src/: lib.rs  vcard.rs  xml.rs
crates/imsg-formats/src/bmessage/: encode.rs  mod.rs  parser.rs  types.rs
crates/imsg-formats/tests/: bmessage_tests.rs  vcard_tests.rs  xml_tests.rs
crates/imsg-ipc/: Cargo.toml
crates/imsg-ipc/src/: lib.rs  proto.rs  rows.rs  state.rs
crates/imsg-ipc/src/proto/: tests.rs
crates/imsg-keyring/: Cargo.toml
crates/imsg-keyring/src/: lib.rs
crates/imsg-map/: Cargo.toml
crates/imsg-map/src/: client.rs  folders.rs  lib.rs  messages.rs  mns_event.rs  mns_server.rs  params.rs  quirks.rs  xml.rs
crates/imsg-map/tests/: folder_listing_tests.rs  map_tests.rs  message_read_tests.rs  message_write_tests.rs  mns_server_tests.rs  mns_tests.rs
crates/imsg-obex/: Cargo.toml
crates/imsg-obex/src/: client.rs  codec.rs  headers.rs  lib.rs  packet.rs  server.rs
crates/imsg-obex/tests/: codec_tests.rs
crates/imsg-pbap/: Cargo.toml
crates/imsg-pbap/src/: client.rs  contacts.rs  lib.rs  params.rs  phonebook.rs
crates/imsg-pbap/tests/: contacts_tests.rs  pbap_tests.rs  phonebook_tests.rs
crates/imsg-service/: Cargo.toml
crates/imsg-service/src/: identity.rs  lib.rs  tests.rs
crates/imsg-session/: Cargo.toml
crates/imsg-session/src/: conn.rs  fetch.rs  lib.rs  lifecycle.rs  loop_util.rs  mns.rs  outbox.rs  reconnect.rs  relay.rs  retry.rs  sync.rs  test_support.rs  util.rs  watch.rs
crates/imsg-session/src/live/: mod.rs  models.rs  tests.rs
crates/imsg-session/src/watch/: mod.rs  tests.rs
crates/imsg-session/tests/: lifecycle_tests.rs
crates/imsg-store/: Cargo.toml
crates/imsg-store/migrations/: V1__initial_schema.sql  V2__outbox_cursors.sql
crates/imsg-store/src/: cursors.rs  lib.rs  outbox.rs  query.rs  read.rs  row.rs  store.rs
crates/imsg-transport/: Cargo.toml
crates/imsg-transport/src/: iroh.rs  lib.rs  rfcomm.rs  tcp.rs
crates/imsg-transport/tests/: iroh_tests.rs  transport_tests.rs
tools/: setup-aarch64  setup-x86_64  setup.c
