[package]
name = "imsg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description  = "Read and send iMessages from the command line over Bluetooth MAP/PBAP — no Apple hardware required"
keywords     = ["bluetooth", "imessage", "sms", "map", "pbap"]
categories   = ["command-line-utilities", "network-programming"]
readme.workspace = true

[[bin]]
name = "imsg"
path = "src/main.rs"

[dependencies]
ratatui              = { version = "0.30.0", optional = true }
crossterm            = { version = "0.29.0", optional = true }
anyhow               = "1.0.102"
tracing              = "0.1.44"
tracing-subscriber   = { version = "0.3.23", features = ["env-filter"] }
indicatif            = "0.18.4"
clap                 = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag  = { version = "3.0.4", default-features = false, features = ["tracing"] }
tokio                = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "process", "sync", "signal", "time"] }
interprocess         = { version = "2.4.2", features = ["tokio"] }
tokio-util           = "0.7.18"
bluer                = { version = "0.17.4", default-features = false }
config               = { package = "imsg-config",    version = "0.2.0", path = "../imsg-config" }
ipc                  = { package = "imsg-ipc",        version = "0.2.0", path = "../imsg-ipc" }
imsg-broker          = { version = "0.2.0", path = "../imsg-broker" }
service              = { package = "imsg-service",   version = "0.2.0", path = "../imsg-service" }
futures              = "0.3"
serde_json           = "1.0.150"
keyring              = { package = "imsg-keyring",   version = "0.2.0", path = "../imsg-keyring" }
store                = { package = "imsg-store",     version = "0.2.0", path = "../imsg-store" }
session              = { package = "imsg-session",   version = "0.2.0", path = "../imsg-session" }
transport            = { package = "imsg-transport", version = "0.2.0", path = "../imsg-transport" }
map-core             = { package = "imsg-map", version = "0.2.0", path = "../imsg-map" }
pbap-core            = { package = "imsg-pbap", version = "0.2.0", path = "../imsg-pbap" }
bytes                = "1"
fs2                  = "0.4"

[dev-dependencies]
serial_test          = "3"
tempfile             = "3"

[features]
tui = ["dep:ratatui", "dep:crossterm"]

[lints]
workspace = true
