[package]
name = "imsg-broker"
description = "Session broker for imsg: owns the RFCOMM/OBEX/MAP session and serves CLI commands over a Unix socket"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
anyhow       = "1.0.102"
interprocess = { version = "2.4.2", features = ["tokio"] }
bluer      = { version = "0.17.4", features = ["rfcomm"] }
bytes      = "1"
config     = { package = "imsg-config",    version = "0.3.0", path = "../imsg-config" }
futures    = "0.3"
ipc        = { package = "imsg-ipc",       version = "0.3.0", path = "../imsg-ipc" }
map-core   = { package = "imsg-map",       version = "0.3.0", path = "../imsg-map" }
serde_json = "1.0.150"
session    = { package = "imsg-session",   version = "0.3.0", path = "../imsg-session" }
store      = { package = "imsg-store",     version = "0.3.0", path = "../imsg-store" }
tokio      = { version = "1.52.3", features = ["rt-multi-thread", "macros", "fs", "net", "sync", "signal", "time"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing              = "0.1.44"
tracing-subscriber   = { version = "0.3.23", features = ["env-filter"] }
transport  = { package = "imsg-transport", version = "0.3.0", path = "../imsg-transport" }

[dev-dependencies]
obex-core = { package = "imsg-obex",  version = "0.3.0", path = "../imsg-obex" }
secrecy   = "0.10"
tempfile  = "3"

[lints]
workspace = true
