[package]
name = "imsg-config"
description = "Layered configuration for imsg: compiled-in defaults, /etc, XDG user, local, and env"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bluer = { version = "0.17.4", default-features = false }
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.18"
toml_edit = "0.22"

[dev-dependencies]
figment = { version = "0.10.19", features = ["test"] }
serial_test = "3"

[lints]
workspace = true
