[package]
name = "imsg-pbap"
description = "PBAP protocol logic — contact pull and vCard retrieval"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
bytes = "1.11.1"
formats = { package = "imsg-formats", version = "0.1.2", path = "../imsg-formats" }
futures = "0.3"
quick-xml = "0.40"
obex-core = { package = "imsg-obex", version = "0.1.2", path = "../imsg-obex" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
transport = { package = "imsg-transport", version = "0.1.2", path = "../imsg-transport" }

[lints]
workspace = true
