[package]
name = "imsg-service"
description = "OS service-manager integration for imsg: install/start/stop the daemon as a systemd/launchd/OpenRC/rc.d/sc.exe service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
nix = { version = "0.29", default-features = false, features = ["user"] }
service-manager = "0.11"
thiserror = "2"

[lints]
workspace = true
